Add descriptions to all handlers and include a "run list" subcommand
Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/man/usysconf.1
+++ b/man/usysconf.1
@@ -24,6 +24,9 @@
 
 When called without any arguments, all system triggers will be executed\.
 Alternatively, you may provide a list of triggers to run directly\.
+
+The special value "list" will cause all known triggers to be listed
+instead of executing them\.
 .
 .fi
 .
