--- a/man/usysconf.1
+++ b/man/usysconf.1
@@ -1,13 +1,13 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "USYSCONF" "1" "November 2017" "" ""
+.TH "USYSCONF" "1" "December 2017" "" ""
 .
 .SH "NAME"
 \fBusysconf\fR \- Universal system configuration
 .
 .SH "SYNOPSIS"
-\fBusysconf run [trigggers]\fR
+\fBusysconf run [triggers]\fR
 .
 .SH "DESCRIPTION"
 \fBusysconf\fR is a system configuration agent designed for integration within the software update process\. The main job for \fBusysconf\fR is to run OS configuration tasks within a well defined centralised location\.
