--- a/man/usysconf.1
+++ b/man/usysconf.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "USYSCONF" "1" "December 2017" "" ""
+.TH "USYSCONF" "1" "January 2018" "" ""
 .
 .SH "NAME"
 \fBusysconf\fR \- Universal system configuration
@@ -131,7 +131,7 @@ On success, 0 is returned\. A non\-zero return code signals a failure\.
 .SH "COPYRIGHT"
 .
 .IP "\(bu" 4
-Copyright © 2017 Ikey Doherty, License: CC\-BY\-SA\-3\.0
+Copyright © 2017\-2018 Ikey Doherty, License: CC\-BY\-SA\-3\.0
 .
 .IP "" 0
 .
